--- a/dashboard.html
+++ b/dashboard.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stream</title>
+  <title>Assignments</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <div class="navbar">
-    <a href="dashboard.html">Stream</a>
-    <a href="assignments.html">Classwork</a>
+  <div class="sidebar">
+    <a href="dashboard.html"><span class="material-icons">home</span></a>
+    <a href="notes.html"><span class="material-icons">note</span></a>
+    <a href="assignments.html"><span class="material-icons">assignment</span></a>
   </div>
 
-  <div class="container">
-    <h1><span class="material-icons">home</span> Welcome to E-Classroom</h1>
-    <p>Connect to Wi-Fi <strong>E-Classroom</strong> and visit <strong>192.168.4.1</strong> to access this site offline.</p>
-
-    <h2><span class="material-icons">event</span> Assignments Due Soon</h2>
-    <iframe src="/due-soon" style="width:100%; height:200px; border:none;"></iframe>
-
-    <h2><span class="material-icons">folder</span> Browse All Files</h2>
-    <a href="/files" class="btn-primary">View Uploaded Files</a>
+  <div class="header">
+    <span class="title">Assignments</span>
+    <span class="material-icons">account_circle</span>
   </div>
+
+  <div class="main">
+    <h2>Upload Assignment</h2>
+    <form method="POST" action="/upload-assignment" enctype="multipart/form-data">
+      <input type="file" name="upload" required>
+      <label>Due Date:</label>
+      <input type="date" name="due" required>
+      <input type="submit" class="btn-primary" value="Upload Assignment">
+    </form>
+
+    <h2>Search Assignments</h2>
+    <input type="text" id="searchInput" placeholder="Search assignments..." onkeyup="filterFiles()" class="search-box">
+    <ul id="fileList">
+      <!-- ESP32 injects assignment list here -->
+    </ul>
+  </div>
+
+  <script>
+    function filterFiles() {
+      const input = document.getElementById('searchInput').value.toLowerCase();
+      const items = document.querySelectorAll('#fileList li');
+      items.forEach(item => {
+        item.style.display = item.textContent.toLowerCase().includes(input) ? '' : 'none';
+      });
+    }
+  </script>
 </body>
 </html>
