--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <nav>
-    <button onclick="showSection('overview')">Overview</button>
+    <button onclick="showSection('home')">Home</button>
     <button onclick="showSection('dashboard')">Dashboard</button>
     <button onclick="showSection('upload')">Upload</button>
     <button onclick="showSection('contact')">Contact</button>
